langtools/test/tools/javac/typeAnnotations/failures/StaticMethods.out
StaticMethods.java:9:22: compiler.err.annotation.type.not.applicable
1 error
